--- a/src/app/components/qday/qday.component.html
+++ b/src/app/components/qday/qday.component.html
@@ -1,15 +1,27 @@
 <div class="main-container">
-    <div class="hedar">
-        <div class="day">
-        <h1>Quote of the Day</h1>
-        <img src="../../../assets/day/Group 22.png" alt="">
-        <div class="content"><img src="../../../assets/day/Group 23.png" alt="">
-            <p>If you can dream it, then you can achieve it. You will get all you want
-                in life if you help enough other people get what they want.</p>
-            <img src="../../../assets/day/Group 24.png" alt="">
-        </div>
+    <div class="quote-container">
+        <div class="quote-title">
+           <h1>Quote of the Day</h1> 
+            <P>
+                <img src="../../../assets/day/Group 22.png" alt="">
+            </P>
 
-        <span>Zig Ziglar</span>
+        </div>
+        <div class="quote-text" style="display: flex; text-align: center;">
+            <i>
+                <img src="../../../assets/day/Group 23.png" alt="">
+            </i>
+            <p>If you can dream it, then you can achieve it. You will get all you want in life if you help enough other
+                people get what they want.</p>
+            
+            <i>
+                <img src="../../../assets/day/Group 24.png" alt="">
+            </i>
+        </div>
+        <div class="quote-author">
+            Zig Ziglar
         </div>
     </div>
+
+
 </div>
