--- a/src/styles.css
+++ b/src/styles.css
@@ -17,7 +17,7 @@
 html,
 body {
   height: 100%;
-  font-family: Montserrat;
+  font-family: Inter;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
