--- a/src/app/components/discover/discover.component.html
+++ b/src/app/components/discover/discover.component.html
@@ -26,7 +26,7 @@
                             been
                             prepared after consulting more than 50 expert astrologers on board.</p>
 
-                        <button class="btn">Generate Kundli Online</button>
+                        <button routerLink="/kundli" class="btn">Generate Kundli Online</button>
                     </div>
                 </div>
             </div>
