--- a/src/app/components/discoverdaily/discoverdaily.component.html
+++ b/src/app/components/discoverdaily/discoverdaily.component.html
@@ -15,13 +15,13 @@
         <div class="card-container">
             <div class="row">
                 <div class="col-md-4">
-                    <div class="card">
+                    <div class="card" >
                         <img src="../../../assets/discover-daily/icon.png" alt="">
                         <h3>Aries Today's Horoscope</h3>
                         <p>Aries crave variety and intellectual stimulation in love and that need is heightened right
                             now and so if your partner is a reflective mood, you may have to phone as friend for some
                             banter.</p>
-                            <div type="button" class="batt">Read More</div>
+                            <div type="button" class="batt" routerLink="/DailyHoroscope_Details">Read More</div>
                     </div>
                 </div>
                 <div class="col-md-4">
@@ -31,7 +31,7 @@
                         <p>Sultry appearance and feeling sexy is all about the kind of company you plant yourself in.
                             Feeling good about yourself is your inner factor, not dependent on any appreciation .But it
                             has its individualistic perception...</p>
-                            <div type="button" class="batt">Read More</div>
+                            <div type="button" class="batt" routerLink="/DailyHoroscope_Details">Read More</div>
                     </div>
                 </div>
                 <div class="col-md-4">
@@ -39,7 +39,7 @@
                         <img src="../../../assets/discover-daily/icon (3).png" alt="">
                         <h3>Gemini Today's Horoscope</h3>
                         <p>Married signs will feel very romantic and endearing towards their loved one. A healthy, loving relationship is all that a single Gemini sign will think about today. Sadly, that dream won't come true today.</p>
-                        <div type="button" class="batt">Read More</div>
+                        <div type="button" class="batt" routerLink="/DailyHoroscope_Details">Read More</div>
                     </div>
                 </div>
             </div>
