--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -5,9 +5,9 @@
             <h1>Jyotish <span style="color: orange;">Connect</span></h1>
             <p>We help you exploring your cosmic path</p>
             <div class="social-icons">
-                <a href="#"><i class="fab fa-facebook"></i></a>
-                <a href="#"><i class="fab fa-instagram"></i></a>
-                <a href="#"><i class="fab fa-twitter"></i></a>
+                <img src="../../../assets/footer/Vector.png" alt="">
+                <img src="../../../assets/footer/insta.png" alt="">
+                <img src="../../../assets/footer/icon.png" alt="">
             </div>
         </div>
         </div>
