--- a/src/app/components/qday/qday.component.css
+++ b/src/app/components/qday/qday.component.css
@@ -1,36 +1,114 @@
 .main-container {
-    height: 100%;
     width: 100%;
-    padding: 50px;
+    height: 80%;
+    padding: 5%;
 }
 
-.hedar {
+.quote-container {
+    background-image: url('../../../assets/day/image.png');
+    text-align: center;
+    background-position: center top;
+    background-size: cover;
     width: 100%;
-    height: 90%;
+    height: 80%;
     border-radius: 1000px;
-    opacity: 0px;
-    text-align: center;
-
     color: white;
-    background-image: url('../../../assets/day/image\ \(6\).png');
+    filter: grayscale(0%);
+    -webkit-filter: grayscale(50%);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
-.day h1 {
-    font-family: Montserrat;
-    font-size: 48px;
+.quote-title h1 {
+    margin-top: 5%;
+    font-size: 2.5rem;
+    font-family: 'Inter', sans-serif;
+}
+
+.quote-title p img {
+    opacity: 1;
+}
+
+.quote-text {
+    margin-top: 2%;
+    margin-left: 40px;
+    padding: 2%;
+
+}
+
+.quote-text i {
+    filter: opacity(0.2)
+}
+
+.quote-text p {
+    font-family: 'Inter', sans-serif;
+    font-size: 25px;
     font-weight: 400;
-    line-height: 58.51px;
+    line-height: 1.5;
     text-align: center;
-    text-underline-position: from-font;
-    text-decoration-skip-ink: none;
+    margin-top: -10px;
 
 }
 
-.content img {
-    width: 73.56px;
-    height: 55.13px;
-    padding: 0px;
-    gap: 10px;
-    opacity: 0px;
-    margin-left: 50px;
+.quote-author {
+    font-family: 'Inter', sans-serif;
+    font-size: 25px;
+    font-weight: 300;
+    line-height: 1.5;
+    text-align: center;
+    margin-top: -10px;
+
+}
+
+/* Media Queries for Responsiveness */
+@media (max-width: 1024px) {
+    .quote-title h1 {
+        font-size: 2rem;
+        /* Adjust font size for medium screens */
+    }
+
+    .quote-text p,
+    .quote-author {
+        font-size: 1.3;
+        /* Adjust font size for medium screens */
+    }
+}
+
+@media (max-width: 768px) {
+    .quote-title h1 {
+        font-size: 2rem;
+        /* Smaller font size for smaller screens */
+    }
+
+    .quote-text p,
+    .quote-author {
+        font-size: 1.5rem;
+        /* Smaller font size for smaller screens */
+    }
+}
+
+@media (max-width: 480px) {
+    .quote-container {
+        width: 100%;
+        height: 80%;
+    }
+    .quote-title h1 {
+        font-size: 1rem;
+        /* Further adjust font size for very small screens */
+    }
+
+    .quote-text p,
+    .quote-author {
+        font-size: 0.5rem;
+        /* Further adjust font size for very small screens */
+    }
+
+    .quote-text {
+        margin-left: 20px;
+        /* Reduce left margin for very small screens */
+        padding: 5%;
+        /* Adjust padding for very small screens */
+    }
 }
